<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.yonko.imagesgrid.ContactsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_rectangle_light"
                android:ems="10"
                android:hint="@string/contacts_phone"
                android:inputType="phone"
                android:padding="8dp" />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/cb_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/share_on_facebook"
            android:textColor="@color/colorPrimary" />

        <CheckBox
            android:id="@+id/cb_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/show_my_location"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/blue_rectangle"
        android:text="@string/save"
        android:textAllCaps="false" />

</LinearLayout>
