<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="32dp"
    android:layout_marginTop="32dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_rectangle_light"
            android:ems="10"
            android:hint="@string/ad_info_title"
            android:inputType="textPersonName"
            android:padding="8dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/input_layout_title"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_rectangle_light"
            android:ems="10"
            android:gravity="top|left"
            android:hint="@string/ad_info_description"
            android:inputType="textMultiLine"
            android:maxLength="512"
            android:minLines="7"
            android:padding="8dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/input_layout_description"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/et_price"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_rectangle_light"
            android:hint="@string/ad_info_price"
            android:inputType="numberDecimal"
            android:padding="8dp" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/input_layout_price"
        android:layout_alignBottom="@+id/input_layout_price"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@+id/input_layout_price"
        android:layout_toRightOf="@+id/input_layout_price"
        android:text="@string/price_sign"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_price_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/input_layout_price"
        android:layout_marginTop="8dp"
        android:text="@string/ad_info_price_desc"
        android:textColor="@android:color/black"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/blue_rectangle"
        android:text="@string/next"
        android:textAllCaps="false" />
</RelativeLayout>
